[FIX][Adding the responsive on the page, first part]

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     width: 100%;
     justify-content: space-around;
+    align-items: center;
     background-color: white;
     animation: header-box linear both;
     animation-timeline: scroll(root);
@@ -28,7 +29,6 @@ body {
         opacity: 1;
     }
 }
-
 .header h1 {
     flex: 2;
     padding: 20px;
@@ -41,6 +41,22 @@ body {
 .header h1 a {
     text-decoration: none;
     color: black;
+}
+
+.header button {
+    display: none;
+    width: 60px;
+    margin-right: 5px;
+    height: 100%;
+    border: none;
+    background-color: white;
+}
+
+.header button i {
+    display: inline-block;
+    width: 50px;
+    height: 4px;
+    background-color: #000;
 }
 
 .menu ul {
@@ -65,6 +81,22 @@ body {
     color: #777;
 }
 
+@media (width < 800px) {
+    .header {
+        flex-wrap: wrap;
+    }
+    .header h1 {
+        font-size: 30px;
+    }
+    .header button {
+        display: inline-block;
+    }
+    
+    .menu ul {
+        display: none;
+    }
+}
+
 .main {
     display: flex;
     flex-direction: column;
@@ -82,12 +114,6 @@ body {
     background: #9bdfff;
     grid-template-columns:  1fr 2fr;
     grid-template-rows: 1fr 1fr;
-}
-
-@media (width < 700px ) {
-    .contain {
-        grid-template-columns: 1fr;
-    }
 }
 
 .contain img {
@@ -110,6 +136,23 @@ body {
 
 .contain h3 {
     font-size: 30px;
+}
+
+
+@media (width < 700px ) {
+    .contain {
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr 1fr 1fr;
+    }
+
+    .contain img {
+        margin: 30px 20px;
+        justify-self: center;
+        grid-row: 1/2;
+    }
+    .contain h2 {
+        font-size: 40px;
+    }
 }
 
 .containInfo {
@@ -206,7 +249,7 @@ body {
 }
 
 .proyecto .proyecto_fotos img{
-    width: 100%;
+    width: 500px;
 }
 
 
@@ -243,6 +286,34 @@ body {
     background-color: #eee;
 }
 
+@media (width < 700px) {
+    .proyecto {
+        grid-template-columns: 1fr;
+        padding: 0;
+    }
+
+    .proyecto  h3, h4 {
+        grid-column: 1/2;
+        text-align: center;
+    }
+
+    .proyecto ul {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .proyecto .proyecto_fotos {
+        width: 350px;
+        margin-top: 20px;
+    }
+    .proyecto .proyecto_fotos img{
+        width: 350px;
+    }
+
+    .proyecto .proyecto_btns{
+        margin-bottom: 20px;
+    }
+}
+
 .containTecno {
     width: 100%;
 } 
@@ -264,6 +335,14 @@ body {
     width: 100px;
 }
 
+@media (width < 700px) {
+    .containTecno .tecnologia ul {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .tecnologia img {
+        width: 90%;
+    }
+}
 .contacto {
     display: flex;
     flex-direction: column;
